--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -1,11 +1,11 @@
 .grid-container {
     display: grid;
     grid-template-areas:
-    "header"
-    "main"
-    "footer";
-    grid-template-columns: 1fr;
-    grid-template-rows: auto auto auto;
+    "header header"
+    "main aside"
+    "footer footer";
+    grid-template-columns: 2fr;
+    grid-template-rows: auto auto auto auto;
     font-family: 'Noto Serif Georgian', serif;
 
     header {
@@ -55,25 +55,27 @@
         height: 100%;
         flex-direction: column;
         justify-content: center;
-        .main__container__producto {
+        h2 {
+            width: 100%;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            text-transform: uppercase;
+            color: transparent;
+            background-color: #392b03;
+            text-shadow: 2px 2px 3px rgba(255, 255, 255, 0.8);
+            margin: 50px 0 50px 0;
+            -webkit-background-clip: text;
+                -moz-background-clip: text;
+                    background-clip: text;
+        }
+        /* .main__container__producto {
             margin: 40px 0;
             padding: 2px 16px;
-            h2 {
-                width: 100%;
-                display: flex;
-                flex-direction: row;
-                justify-content: center;
-                text-transform: uppercase;
-                color: transparent;
-                background-color: #392b03;
-                text-shadow: 2px 2px 3px rgba(255, 255, 255, 0.8);
-                margin: -10px 0 1rem;
-                -webkit-background-clip: text;
-                    -moz-background-clip: text;
-                        background-clip: text;
-            }
+            flex-direction: row;
+            display: inline-block; */
             .section__img {
-                display: flex;
+                display: inline-flex;
                 justify-content: space-around;
                 flex-wrap: wrap;
                 :first-child,
@@ -91,9 +93,11 @@
                     height: 475px;
                     padding: 15px;
                     border-radius: 2px 25px;
+                    margin: 0 0px 50px 90px;
                     .producto__info {
                         border-top: 1px solid #777;
-                        button {
+                        .btn {
+                            display: flex;
                             background-color: rgb(33, 29, 1);
                             border-radius: 5px 25px;
                             color: wheat;
@@ -105,7 +109,7 @@
                             width: 100%;
                             cursor: pointer;
                         }
-                        button:hover {
+                        .btn:hover {
                             background-color: rgba(33, 26, 0, 0.88);
                         }
                         h3 {
@@ -134,6 +138,105 @@
                     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, .3);
                 }
             }
+        /* } */
+    }
+
+    aside {
+        grid-area: aside;
+        font-family: 'Noto Serif Georgian', serif;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        max-width: 400px;
+        min-width: 400px;
+        margin: 50px;
+        h2 {
+            width: 100%;
+            display: flex;
+            flex-direction: row;
+            text-transform: uppercase;
+            color: rgb(54, 49, 7);
+            font-family: 'Noto Serif Georgian', serif;
+        }
+        hr {
+            border: none;
+            height: 1px;
+            background-color: #777;
+        }
+        p {
+            font-family: 'Noto Serif Georgian', serif;
+        }
+        .boton {
+            background-color: #c80f22;
+            border-radius: 7px;
+            color: white;
+            border: 0;
+            padding: 3%;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            font-family: sans-serif;
+            width: 100px;
+            cursor: pointer;
+        }
+        .section__img {
+            display: flex;
+            justify-content: end;
+            flex-direction: column;
+            :first-child,
+            :nth-child(2),
+            :nth-child(3),
+            :nth-child(4) {
+                display: flex;
+                flex-direction: row;
+            }
+            li {
+                display: flex;
+                gap: 10px;
+                width: 100%;
+                height: 100%;
+                padding: 15px;
+                border-radius: 10px 10px;
+                border: 1px solid rgb(202, 202, 201);
+                margin: 15px 0;
+                .producto__info {
+                    display: flex;
+                    flex-direction: column;
+                    gap: 5px;
+                    .btn {
+                        font-family: sans-serif;
+                        display: flex;
+                        background-color: #c80f22;
+                        border-radius: 7px;
+                        color: white;
+                        border: 0;
+                        padding: 10%;
+                        display: flex;
+                        flex-direction: row;
+                        justify-content: center;
+                        width: 100px;
+                        cursor: pointer;
+                    }
+                    h3 {
+                        font-weight: 500;
+                        padding-bottom: 5px;
+                        font-size: large;
+                    }
+                    h4 {
+                        color: #777888;
+                        font-weight: 400;
+                        font-size: smaller;
+                        margin-bottom: 3px;
+                    }
+                    a {
+                        text-decoration: none;
+                    }
+                }
+                .a-producto {
+                    max-width: 150px;
+                    height: 100%;
+                }
+            }
         }
     }
 
@@ -157,13 +260,13 @@
                     .logo img {
                         width: 70px;
                     }
-                    h2 {
+                    .h2 {
                         color: rgb(248, 237, 216);
                         font-weight: 600;
                         font-size: 2rem;
                     }
                     h3 {
-                        @extend h2;
+                        @extend .h2;
                         margin-bottom: 20px;
                     }
                     .box__footer__a {
