--- a/scss/main.css
+++ b/scss/main.css
@@ -37,32 +37,15 @@
   flex-direction: row;
   justify-content: center;
   margin: auto;
-  padding: 0 40px 0 0;
+  padding: 0 120px 0 0;
   font-weight: 400;
   font-family: "Noto Serif Georgian", serif;
-}
-.grid-container header .carrito {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  margin-right: 50px;
-}
-.grid-container header .carrito i {
-  font-size: 25px;
-  color: rgb(248, 237, 216);
 }
 .grid-container main {
   grid-area: main;
   height: 100%;
   flex-direction: column;
   justify-content: center;
-  /* .main__container__producto {
-      margin: 40px 0;
-      padding: 2px 16px;
-      flex-direction: row;
-      display: inline-block; */
-  /* } */
 }
 .grid-container main h2 {
   width: 100%;
@@ -106,7 +89,7 @@
 .grid-container main .section__img li .producto__info .btn {
   display: flex;
   background-color: rgb(33, 29, 1);
-  border-radius: 5px 25px;
+  border-radius: 4px 25px;
   color: wheat;
   border: 0;
   padding: 4%;
@@ -115,9 +98,6 @@
   justify-content: center;
   width: 100%;
   cursor: pointer;
-}
-.grid-container main .section__img li .producto__info .btn:hover {
-  background-color: rgba(33, 26, 0, 0.88);
 }
 .grid-container main .section__img li .producto__info h3 {
   font-weight: 500;
@@ -140,7 +120,7 @@
   margin-right: auto;
 }
 .grid-container main .section__img li:hover {
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.3);
+  box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.3);
 }
 .grid-container aside {
   grid-area: aside;
@@ -151,6 +131,13 @@
   max-width: 400px;
   min-width: 400px;
   margin: 50px;
+}
+.grid-container aside .carrito {
+  display: flex;
+}
+.grid-container aside .carrito i {
+  font-size: 25px;
+  color: #392b03;
 }
 .grid-container aside h2 {
   width: 100%;
@@ -301,4 +288,32 @@
   border: none;
   height: 1px;
   background-color: rgb(248, 237, 216);
+}
+
+@media only screen and (max-width: 900px) {
+  .grid-container {
+    grid-template-areas: "header" "main" "aside" "footer";
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto auto auto;
+  }
+  .grid-container header {
+    grid-area: header;
+  }
+  .grid-container main {
+    grid-area: main;
+  }
+  .grid-container main .section__img li {
+    margin: 0 0px 50px 90px;
+  }
+  .grid-container aside {
+    grid-area: aside;
+  }
+  .grid-container footer {
+    grid-area: footer;
+  }
+}
+@media only screen and (max-width: 500px) {
+  .grid-container main .section__img li {
+    margin: 0 0px 50px 120px;
+  }
 }/*# sourceMappingURL=main.css.map */
