agregando cambios css

--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -1,43 +1,48 @@
-@media only screen and (max-width: 900px) {
+@media only screen and (min-width:501px) and (max-width: 991px) {
     .grid-container {
-        grid-template-areas:
-        "header"
-        "main"
-        "aside"
-        "footer";
-        grid-template-columns: 1fr;
-        grid-template-rows: auto auto auto auto;
-
-        header {
-            grid-area: header;
-        }
 
         main {
-            grid-area: main;
             .section__img {
+                margin-bottom: 20px;
                 li {
-                    margin: 0 0px 50px 90px;
+                    flex-direction: column;
+                    .separador {
+                        gap: 20px;
+                    }
+                    .a-producto {
+                        max-width: 400px !important;
+                        min-width: 10px !important;
+                        height: auto;
+                        margin: auto;
+                    }
                 }
             }
-        }
-
-        aside {
-            grid-area: aside;
-        }
-
-        footer {
-            grid-area: footer;
         }
     }
 }
 @media only screen and (max-width: 500px) {
     .grid-container {
+
         main {
             .section__img {
+                margin-bottom: 20px;
                 li {
-                    margin: 0 0px 50px 120px;
+                    flex-direction: column;
+                    .separador {
+                        gap: 20px;
+                    }
+                    .a-producto {
+                        max-width: 400px !important;
+                        min-width: 10px !important;
+                        height: auto;
+                        margin: auto;
+                    }
                 }
             }
+        }
+
+        aside {
+            max-width: 100% !important;
         }
     }
 }
