--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -1,16 +1,17 @@
 .grid-container {
     display: grid;
     grid-template-areas:
-    "header header"
-    "main aside"
-    "footer footer";
-    grid-template-columns: 2fr;
+    "header"
+    "main"
+    "aside"
+    "footer";
+    grid-template-columns: 1fr;
     grid-template-rows: auto auto auto auto;
     font-family: 'Noto Serif Georgian', serif;
 
     header {
         grid-area: header;
-        background: linear-gradient(90deg, rgb(24, 18, 0), rgb(38, 30, 1), rgb(44, 36, 0));
+        background: linear-gradient(90deg, rgb(24, 18, 0), rgb(63, 52, 8), rgb(49, 40, 6));
         display: flex;
         flex-direction: row;
         justify-content: center;
@@ -40,11 +41,14 @@
 
 
     main {
+        background-color: rgb(234, 234, 234);
         grid-area: main;
         height: 100%;
         flex-direction: column;
         justify-content: center;
+        width: 100%;
         h2 {
+            font-family: 'Noto Serif Georgian', serif;
             width: 100%;
             display: flex;
             flex-direction: row;
@@ -59,7 +63,7 @@
                     background-clip: text;
         }
         .section__img {
-            display: inline-flex;
+            width: 100%;
             justify-content: space-around;
             flex-wrap: wrap;
             :first-child,
@@ -67,56 +71,68 @@
             :nth-child(3),
             :nth-child(4) {
                 display: flex;
-                flex-direction: column;
-                justify-content: center;
             }
             li {
                 display: flex;
                 gap: 10px;
-                width: 260px;
-                height: 475px;
+                height: auto;
                 padding: 15px;
-                border-radius: 2px 25px;
-                margin: 0 0px 50px 90px;
-                .producto__info {
-                    border-top: 1px solid #777;
-                    .btn {
-                        display: flex;
-                        background-color: rgb(33, 29, 1);
-                        border-radius: 4px 25px;
-                        color: wheat;
-                        border: 0;
-                        padding: 4%;
-                        display: flex;
-                        flex-direction: row;
-                        justify-content: center;
-                        width: 100%;
-                        cursor: pointer;
-                    }
-                    h3 {
+                .separador {
+                    width: 100%;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-around;
+                    margin-top: 5px;
+                    margin-bottom: -10px;
+                    p {
+                        font-style: italic;
+                        font-family: 'Noto Serif Georgian', serif;
                         font-weight: 500;
-                        padding-bottom: 5px;
-                        font-size: x-large;
+                        font-size: large;
+                        max-width: 100%;
                     }
-                    h4 {
-                        color: #777888;
-                        font-weight: 400;
-                        font-size: larger;
-                        margin-bottom: 3px;
-                    }
-                    a {
-                        text-decoration: none;
+                    .producto__info {
+                        display: flex;
+                        flex-direction: column;
+                        .btn {
+                            display: flex;
+                            background-color: rgb(41, 36, 2);
+                            border-radius: 4px;
+                            color: rgb(248, 237, 216);
+                            border: 0;
+                            padding: 12px;
+                            display: flex;
+                            flex-direction: row;
+                            justify-content: center;
+                            width: 100%;
+                            cursor: pointer;
+                        }
+                        .btn:hover {
+                            color: wheat;
+                        }
+                        h3 {
+                            font-weight: 500;
+                            padding-bottom: 5px;
+                            font-size: x-large;
+                            font-family: 'Noto Serif Georgian', serif;
+                        }
+                        h4 {
+                            color: #777888;
+                            font-weight: 400;
+                            font-size: larger;
+                            margin-bottom: 3px;
+                            font-family: 'Noto Serif Georgian', serif;
+                        }
+                        a {
+                            text-decoration: none;
+                        }
                     }
                 }
                 .a-producto {
-                    width: 220px;
-                    height: 330px;
-                    margin-left: auto;
-                    margin-right: auto;
+                    max-width: 400px;
+                    min-width: 400px;
+                    height: auto;
                 }
-            }
-            li:hover {
-                box-shadow: 0 5px 10px 0 rgba(0, 0, 0, .3);
             }
         }
     }
@@ -127,8 +143,8 @@
         display: flex;
         flex-direction: column;
         gap: 20px;
-        max-width: 400px;
-        min-width: 400px;
+        max-width: 40%;
+        min-width: 40%;
         margin: 50px;
         .carrito {
             display: flex;
@@ -158,7 +174,7 @@
             border-radius: 7px;
             color: white;
             border: 0;
-            padding: 3%;
+            padding: 12px;
             display: flex;
             flex-direction: row;
             justify-content: center;
@@ -230,7 +246,7 @@
 
     .footer {
         grid-area: footer;
-        background-color: #261e0c;
+        background-color: #211806;
         width: 100%;
         &-container {
             .footer__contenedor {
