--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -163,24 +163,47 @@
         }
         hr {
             border: none;
-            height: 1px;
-            background-color: #777;
+            height: 10px;
+            background-color: #777777;
         }
         p {
             font-family: 'Noto Serif Georgian', serif;
         }
-        .boton {
-            background-color: #c80f22;
-            border-radius: 7px;
-            color: white;
-            border: 0;
-            padding: 12px;
+        .box--comprar-vaciar {
             display: flex;
-            flex-direction: row;
-            justify-content: center;
-            font-family: sans-serif;
-            width: 100px;
-            cursor: pointer;
+            gap: 20px;
+            .boton {
+                background-color: #c80f22;
+                border-radius: 7px;
+                color: white;
+                border: 0;
+                padding: 12px;
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                font-family: sans-serif;
+                width: 100px;
+                cursor: pointer;
+                display: flex;
+            }
+            .boton2 {
+                @extend .boton;
+                background-color: rgb(41, 36, 2);
+                color: rgb(248, 237, 216);
+            }
+        }
+        .aside__ticket {
+            h4 {
+                text-align: center;
+                margin-bottom: 5px;
+            }
+            display: flex;
+            flex-direction: column;
+            gap: 5px;
+            text-transform: uppercase;
+            padding: 15px;
+            margin: auto;
+            height: 100%;
         }
         .section__img {
             display: flex;
