agregando cambios css

--- a/scss/main.css
+++ b/scss/main.css
@@ -62,7 +62,7 @@
   color: transparent;
   background-color: #392b03;
   text-shadow: 2px 2px 3px rgba(255, 255, 255, 0.8);
-  margin: 50px 0 50px 0;
+  margin: 134px 0 0 0;
   -webkit-background-clip: text;
   -moz-background-clip: text;
   background-clip: text;
