agregando cambios en el responsive del footer

--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -272,7 +272,7 @@
 
     .footer {
         grid-area: footer;
-        background-color: #303030;
+        background-color: #3a3a3a;
         width: 100%;
         &-container {
             .footer__contenedor {
