--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -54,5 +54,36 @@
         aside {
             max-width: 100% !important;
         }
+
+        .footer {
+            min-width: 350px;
+            &-container {
+                .footer__contenedor {
+                    .box__footer {
+                        padding: 20px 50px 20px 50px ;
+                        .h2 {
+                            font-size: 1.2rem;
+                        }
+                        .box__footer__a {
+                            gap: 20px;
+                            a {
+                                margin-top: .5rem;
+                                gap: 5px;
+                                font-size: 12px;
+                            }
+                            a:hover {
+                                opacity: .8;
+                            }
+                        }
+                    }
+                }
+                .box__copyright {
+                    p {
+                        font-weight: 400;
+                        font-size: 10px;
+                    }
+                }
+            }
+        }
     }
 }
