--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -101,7 +101,7 @@
                             display: flex;
                             background-color: #9e822e;
                             border-radius: 4px;
-                            color: rgb(248, 237, 216);
+                            color: white;
                             border: 0;
                             padding: 12px;
                             display: flex;
@@ -111,7 +111,7 @@
                             cursor: pointer;
                         }
                         .btn:hover {
-                            color: wheat;
+                            background-color: #91782c;
                         }
                         h3 {
                             font-weight: 500;
@@ -189,10 +189,12 @@
                 cursor: pointer;
                 display: flex;
             }
+            .boton:hover {
+                opacity: .9;
+            }
             .boton2 {
                 @extend .boton;
                 background-color: #9e822e;
-                color: rgb(248, 237, 216);
             }
         }
         .aside__ticket {
@@ -245,6 +247,9 @@
                         justify-content: center;
                         width: 100px;
                         cursor: pointer;
+                    }
+                    .btn:hover {
+                        opacity: .9;
                     }
                     h3 {
                         font-weight: 500;
