--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -36,9 +36,38 @@
             flex-direction: row;
             justify-content: center;
             margin: auto;
-            padding: 0 120px 0 0;
+            /* padding: 0 120px 0 0; */
             font-weight: 400;
             font-family: 'Noto Serif Georgian', serif;
+        }
+        .nav__form {
+            display: flex;
+            flex-direction: row;
+            justify-content: end;
+            align-items: center;
+            gap: 1rem;
+            margin: 0 50px 0 0;
+            input {
+                height: 38px;
+                width: 230px;
+                padding: 10px;
+                border: 1px solid #d3d7da;
+            }
+            input:focus {
+                border: 1px solid #777888;
+                outline: none;
+                transition: all 1s;
+            }
+            button {
+                height: auto;
+                width: 24px;
+                background: none;
+                border: none;
+                cursor: pointer;
+                display: flex;
+                flex-direction: column;
+                justify-content: end;
+            }
         }
     }
 
@@ -153,7 +182,7 @@
             display: flex;
             i {
                 font-size: 25px;
-                color: #392b03;
+                color: rgb(57, 57, 57);
             }
         }
         h2 {
@@ -161,12 +190,12 @@
             display: flex;
             flex-direction: row;
             text-transform: uppercase;
-            color: rgb(54, 49, 7);
+            color: rgb(57, 57, 57);
             font-family: 'Noto Serif Georgian', serif;
         }
         hr {
             border: none;
-            height: 10px;
+            height: 5px;
             background-color: #777777;
         }
         p {
@@ -198,10 +227,6 @@
             }
         }
         .aside__ticket {
-            h4 {
-                text-align: center;
-                margin-bottom: 5px;
-            }
             display: flex;
             flex-direction: column;
             gap: 5px;
@@ -209,6 +234,10 @@
             padding: 15px;
             margin: auto;
             height: 100%;
+            h4 {
+                text-align: center;
+                margin-bottom: 5px;
+            }
         }
         .section__img {
             display: flex;
