cambios storage y fetch

--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -226,6 +226,11 @@
                 background-color: #9e822e;
             }
         }
+        .p {
+            font-family: Arial, Helvetica, sans-serif;
+            font-weight: 600;
+            color: #4e4e4e;
+        }
         .aside__ticket {
             display: flex;
             flex-direction: column;
