--- a/scss/main.css
+++ b/scss/main.css
@@ -226,6 +226,11 @@
 .grid-container aside .box--comprar-vaciar .boton2 {
   background-color: #9e822e;
 }
+.grid-container aside .p {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 600;
+  color: #4e4e4e;
+}
 .grid-container aside .aside__ticket {
   display: flex;
   flex-direction: column;
